--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: Gerenciando máqunas virtuales</li>
          <li> Docker: Creando containers sin dolor de cabeza</li>
          <li> Ansible </li>
          <li> Integración contínua: Madurez y productividad en el desarrollo de software</li>
