--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Gerenciando máqunas virtuales</li>
          <li> Docker: Creando containers sin dolor de cabeza</li>
-         <li> Ansible: Infraestrucutra como código </li>
+         <li> Ansible </li>
          <li> Integración contínua: Madurez y productividad en el desarrollo de software</li>
          <li>Kubernetes</li>
      </ul>
